--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -62,6 +62,7 @@ moshi = { module = 'com.squareup.moshi:moshi', version.ref = 'moshi' }
 moshi-adapters = { module = 'com.squareup.moshi:moshi-adapters', version.ref = 'moshi' }
 kotshi-api = { module = 'se.ansman.kotshi:api', version.ref = 'kotshi' }
 kotshi-compiler = { module = 'se.ansman.kotshi:compiler', version.ref = 'kotshi' }
+gson = 'com.google.code.gson:gson:2.9.1'
 
 # Network
 retrofit = { module = 'com.squareup.retrofit2:retrofit', version.ref = 'retrofit' }
