Add the storage test for the normal version, no encryption yet

--- a/app-domain/build.gradle
+++ b/app-domain/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
     implementation libs.rxjava
     implementation libs.timber
+    implementation libs.gson
 
     implementation project(":app-common")
 }
