--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -75,6 +75,9 @@ glide = { module = 'com.github.bumptech.glide:glide', version.ref = 'glide' }
 glide-okhttp3 = { module = 'com.github.bumptech.glide:okhttp3-integration', version.ref = 'glide' }
 glide-compiler = { module = 'com.github.bumptech.glide:compiler', version.ref = 'glide' }
 
+# Crypto
+androidx-security-crypto = ' androidx.security:security-crypto:1.1.0-alpha04'
+
 # Testing
 test-junit = 'junit:junit:4.13.2'
 test-junit-kotlin = { module = 'org.jetbrains.kotlin:kotlin-test-junit', version.ref = 'kotlin' }
